# tempesta

./: .gitignore  .markdownlint.json  CONTRIBUTING.md  Cargo.toml  DEV.md  LICENSE  README.md  ci.toml  shell.nix
.github/: pull_request_template.md
.github/workflows/: auto-release.yml  build-release.yml  pr-validation.yml  release-on-merge.yml  release.yml  update-packages.yml
completion/: tempesta-completion.bash.sh  tempesta-completion.sh
scripts/: fetch-rebase  fetch-rebase.sh  install  install-hooks.sh  pipe  setup-branch-protection  setup-branch-protection.sh
scripts/hooks/: pre-commit
src/: main.rs  tests.rs
src/completions/: tempesta-completion.bash.sh  tempesta-completion.fish.sh  tempesta-completion.zsh.sh
src/methods/: add.rs  common.rs  completion.rs  config.rs  edit.rs  get.rs  init.rs  list.rs  mod.rs  move.rs  open.rs  remove.rs  update.rs
