[package]
name = "tempesta"
version = "0.0.76"
authors = ["Andrea Reni <mail@x71c9.com>"]
edition = "2021"
description = "The lightest and fastest CLI for managing bookmarks, written in Rust"
repository = "https://github.com/x71c9/tempesta"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
webbrowser = "1.0.4"
toml = "0.8"
regex = "1"

[package.metadata.release]
push = true
publish = true
tag-message = "chore(release): v{{version}}"
pre-release-commit-message = "chore(release): release v{{version}}"
